--- a/.github/workflows/tweet-deletion.yaml
+++ b/.github/workflows/tweet-deletion.yaml
@@ -1,5 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Tweet Deletion
 on:
   schedule:
@@ -19,7 +17,7 @@ jobs:
       - name: install requirements
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirement.txt
+          pip install -r requirements.txt
       - name: execute py script
         run: |
           python main.py
