--- a/.github/workflows/tweet-deletion.yaml
+++ b/.github/workflows/tweet-deletion.yaml
@@ -1,33 +1,33 @@
-name: Tweet Deletion
-on:
-  schedule:
-    - cron: "0 0 * * *"
+# name: Tweet Deletion
+# on:
+#   schedule:
+#     - cron: "0 0 * * *"
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: checkout repo content
-        uses: actions/checkout@v2 # checkout the repository content to github runner.
-      - name: setup python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.9.13 #install the python needed
-      - name: install requirements
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: execute py script
-        run: |
-          python main.py
-        env:
-          SERVICE_ACCOUNT: ${{ secrets.SERVICE_ACCOUNT }}
-          STORAGE_BUCKET: ${{ secrets.STORAGE_BUCKET }}
-          API_KEY: ${{ secrets.API_KEY }}
-          API_SECRET_KEY: ${{ secrets.API_SECRET_KEY }}
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          ACCESS_SECRET_TOKEN: ${{ secrets.ACCESS_SECRET_TOKEN }}
-          SCREEN_NAME: ${{ secrets.SCREEN_NAME }}
-      - uses: actions/checkout@v2
-      - uses: gautamkrishnar/keepalive-workflow@v1
+#     steps:
+#       - name: checkout repo content
+#         uses: actions/checkout@v2 # checkout the repository content to github runner.
+#       - name: setup python
+#         uses: actions/setup-python@v2
+#         with:
+#           python-version: 3.9.13 #install the python needed
+#       - name: install requirements
+#         run: |
+#           python -m pip install --upgrade pip
+#           pip install -r requirements.txt
+#       - name: execute py script
+#         run: |
+#           python main.py
+#         env:
+#           SERVICE_ACCOUNT: ${{ secrets.SERVICE_ACCOUNT }}
+#           STORAGE_BUCKET: ${{ secrets.STORAGE_BUCKET }}
+#           API_KEY: ${{ secrets.API_KEY }}
+#           API_SECRET_KEY: ${{ secrets.API_SECRET_KEY }}
+#           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+#           ACCESS_SECRET_TOKEN: ${{ secrets.ACCESS_SECRET_TOKEN }}
+#           SCREEN_NAME: ${{ secrets.SCREEN_NAME }}
+#       - uses: actions/checkout@v2
+#       - uses: gautamkrishnar/keepalive-workflow@v1
